<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragmentProfileRoot"
    android:padding="16dp"
    tools:context=".ui.fragment.profile.FragmentProfile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layoutUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/profile"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imgUser"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginTop="20dp"
                android:text="@string/username"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/email"
                android:textSize="15sp" />

            <LinearLayout
                android:weightSum="3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="20dp"
                    app:cardBackgroundColor="?attr/colorPrimaryContainer"
                    app:cardCornerRadius="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <TextView
                                android:id="@+id/labelPhone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:ellipsize="end"
                                android:fontFamily="@font/poppins_semi_bold"
                                android:gravity="center"
                                android:layout_gravity="center"
                                android:maxLines="1"
                                android:text="Phone"
                                android:textColor="?attr/colorOnPrimaryContainer"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvPhone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_medium"
                                android:gravity="center"
                                android:layout_gravity="center"
                                android:text="@string/_087884984112"
                                android:textColor="?attr/colorOnSurface"
                                android:textSize="12sp" />
                        </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="20dp"
                    app:cardBackgroundColor="?attr/colorPrimaryContainer"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/labelBirthday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:ellipsize="end"
                            android:fontFamily="@font/poppins_semi_bold"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:text="Birth Date"
                            android:textColor="?attr/colorOnPrimaryContainer"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvBirthday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:text="@string/_01_jun_2006"
                            android:textColor="?attr/colorOnSurface"
                            android:textSize="12sp" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="20dp"
                    app:cardBackgroundColor="?attr/colorPrimaryContainer"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/labelRole"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:ellipsize="end"
                            android:fontFamily="@font/poppins_semi_bold"
                            android:gravity="center"
                            android:maxLines="1"
                            android:text="Role"
                            android:textColor="?attr/colorOnPrimaryContainer"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvRole"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:text="Admin"
                            android:textColor="?attr/colorOnSurface"
                            android:textSize="12sp" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="15dp">

                <ImageView
                    android:id="@+id/iconPerson"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    style="@style/bg_btn"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_person"/>

                <TextView
                    android:id="@+id/tvUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/email"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="15dp">

                <ImageView
                    android:id="@+id/iconHome"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    style="@style/bg_btn"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_home"/>

                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/jakarta"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="15dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    style="@style/bg_btn"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_university"/>

                <TextView
                    android:id="@+id/tvUniversity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="SMKN 26 JAKARTA"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="15dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    style="@style/bg_btn"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_bloodtype"/>

                <TextView
                    android:id="@+id/tvBloodType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="B+"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="15dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    style="@style/bg_btn"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_credit_card"/>

                <TextView
                    android:id="@+id/tvCreditCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="12345678"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pbUser"
        android:visibility="visible"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_pen"
        android:id="@+id/btnEditProfile"/>

</RelativeLayout>