<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_list"
        android:title="@string/list_products"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/fragmentIntent"
        android:icon="@drawable/ic_move"
        android:title="@string/intent"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/fragmentProfile"
        android:icon="@drawable/ic_person"
        android:title="@string/profile"
        app:showAsAction="ifRoom"/>

</menu>