<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/fragmentIntentRoot"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.intent.FragmentIntent">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/resultImg"
        android:layout_above="@id/btnGalery"
        tools:src="@tools:sample/avatars"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/galery"
        android:id="@+id/btnGalery"
        android:layout_centerInParent="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:id="@+id/btnCamera"
        android:layout_centerInParent="true"
        android:layout_below="@id/btnGalery"/>
</RelativeLayout>